--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m24\u001b[39m,\u001b[38;5;241m34\u001b[39m,\u001b[38;5;241m54\u001b[39m,\u001b[38;5;241m65\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m5.3\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkarate\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m arr\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['24', '34', '54', '65', '67', '5.3', 'karate'], dtype='<U32')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,10 +150,10 @@
      "evalue": "ufunc 'square' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m arr[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m500\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[43marr\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: ufunc 'square' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m arr[-\u001b[32m1\u001b[39m] = \u001b[32m500\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43marr\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2\u001b[39;49m\n",
+      "\u001b[31mTypeError\u001b[39m: ufunc 'square' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
      ]
     }
    ],
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +182,7 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +204,7 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +225,7 @@
        "       [8, 9]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,63 +532,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[178, 107, 110],\n",
-       "        [ 12, 164, 167],\n",
-       "        [103,  13,   8],\n",
-       "        [ 39,  60,  14],\n",
-       "        [123,  55, 100]],\n",
+       "array([[[ 90,  13,  19, 188],\n",
+       "        [147,  87, 190, 114],\n",
+       "        [ 89, 132,   5,   1],\n",
+       "        [ 76,  14, 124,  14],\n",
+       "        [116,  23, 120,   4]],\n",
        "\n",
-       "       [[ 16,  46, 186],\n",
-       "        [143,  13,  35],\n",
-       "        [ 43,  40, 160],\n",
-       "        [159, 185,  50],\n",
-       "        [110,  74, 156]],\n",
+       "       [[ 68,  58, 190,  24],\n",
+       "        [152,  77, 141,   5],\n",
+       "        [192,  58, 191, 188],\n",
+       "        [152,  34, 165,  19],\n",
+       "        [106, 196, 122, 173]],\n",
        "\n",
-       "       [[ 54,  21,  48],\n",
-       "        [185,  16, 160],\n",
-       "        [ 98,  18,  80],\n",
-       "        [ 88, 114,  26],\n",
-       "        [167, 159,  68]]], dtype=int32)"
+       "       [[123,  64,  14, 162],\n",
+       "        [ 45, 149,  18,  54],\n",
+       "        [ 14, 173, 130, 194],\n",
+       "        [143, 161,  47,  81],\n",
+       "        [119,  46, 147, 180]]], dtype=int32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ar6 = np.random.randint(1,200,(3,5,3))   # (3 table , 5 row , 3 column)\n",
+    "ar6 = np.random.randint(1,200,(3,5,4))   # (3 table , 5 row , 4 column)\n",
     "ar6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 21  48]\n",
-      " [ 16 160]]\n"
+      "[[ 64  14 162]\n",
+      " [149  18  54]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[178, 107, 110],\n",
-       "       [ 16,  46, 186],\n",
-       "       [ 54,  21,  48]], dtype=int32)"
+       "array([[ 90,  13,  19, 188],\n",
+       "       [ 68,  58, 190,  24],\n",
+       "       [123,  64,  14, 162]], dtype=int32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +609,7 @@
        "array([9, 7, 8])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -639,8 +638,8 @@
       "8.0\n",
       "24\n",
       "9\n",
-      "0\n",
-      "2\n"
+      "1\n",
+      "0\n"
      ]
     },
     {
@@ -649,7 +648,7 @@
        "array([9, 8, 7])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
